# docs/swagger.json
@@ -251,6 +251,51 @@
         }
       }
     },
+    "/auth/totalUsers": {
+      "get": {
+        "tags": [
+          "Auth"
+        ],
+        "summary": "Retrieve total number of registered users",
+        "operationId": "totalUser",
+        "description": "Returns the total count of users registered in the application.",
+        "security": [],
+        "responses": {
+          "200": {
+            "description": "Successful response with the total user count.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Total number of registered users retrieved successfully!"
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "totalUsers": {
+                          "type": "integer",
+                          "example": 152
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "$ref": "#/components/responses/400"
+          }
+        }
+      }
+    },
     "/water": {
       "post": {
         "tags": [
