# src/routers/auth.js
@@ -3,6 +3,7 @@ import { ctrlWrapper } from '../utils/ctrlWrapper.js';
 import { validateBody } from '../middlewares/validateBody.js';
 import { loginUserSchema, registerUserSchema } from '../validation/auth.js';
 import {
+  countUsersController,
   loginUserController,
   logoutUserController,
   registerUserController,
@@ -12,5 +13,6 @@ const authRouter = Router();
 authRouter.post('/signup', validateBody(registerUserSchema), ctrlWrapper(registerUserController));
 authRouter.post('/signin', validateBody(loginUserSchema), ctrlWrapper(loginUserController));
 authRouter.post('/logout', ctrlWrapper(logoutUserController));
+authRouter.get('/totalUsers', ctrlWrapper(countUsersController));
 
 export default authRouter;
